--- a/src/main/resources/home.html
+++ b/src/main/resources/home.html
@@ -1,11 +1,2 @@
-<html>
-<head>
-        <title>${title}</title>
-</head>
-<body>
-<h1>${title}</h1>
-
-<p>${body}</p>
-
-</body>
-</html>
+<#include "/header.ftl">
+<#include "/footer.ftl">
