--- a/src/main/resources/home.html
+++ b/src/main/resources/home.html
@@ -1,5 +1,19 @@
 <#include "/header.ftl">
 <main role="main">
+    <div id="mapDiv" style="height:100%;"></div>
+    <script>
+        var center = [12.9160463,77.5967117]
+        var mymap = L.map('mapDiv').setView(center, 17);
 
+        L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1Ijoic3VzaGVlbGsiLCJhIjoiY2s3NHR3YjN1MDhxOTNrcGxreGM2bmxwdiJ9.h0asAA-St15DH7sCIc0drw', {
+		maxZoom: 24,
+		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors, ' +
+			'<a href="https://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, ' +
+			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+		id: 'mapbox/streets-v11',
+		tileSize: 512,
+		zoomOffset: -1
+	}).addTo(mymap);
+    </script>
 </main>
 <#include "/footer.ftl">
